Message / Poll: Fix jumping height when answering (#1430)

--- a/src/components/middle/message/PollOption.scss
+++ b/src/components/middle/message/PollOption.scss
@@ -59,6 +59,7 @@
 
   .poll-option-right {
     flex-grow: 1;
+    line-height: 1.5rem;
   }
 
   .poll-option-answer {
